<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/book_drawer_layout"
    android:background="@drawable/backg1"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <include
...
            app:layout_constraintStart_toStartOf="parent"
            app:navigationIcon="@drawable/icon_title_down"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="45dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_all"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:navigationIcon="@drawable/icon_title_all"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="45dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_scan"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="250dp"
            android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:navigationIcon="@drawable/icon_title_scan"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="45dp" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_openDrawer"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            android:layout_marginStart="4dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="328dp"
        android:layout_marginBottom="112dp"
        android:clickable="true"
        android:contentDescription="@string/add_item_fab"
...
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="MissingConstraints"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--滑动导航视图-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backg3"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start" />
...
