...
            android:id="@+id/set_wifi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关闭"
            style="?android:listSeparatorTextViewStyle"/>
       <Switch
           android:id="@+id/sw_wifi"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"></Switch>>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关闭"
            android:id="@+id/set_bluetooth_text"
            style="?android:listSeparatorTextViewStyle"/>
        <Switch
            android:id="@+id/sw_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Switch>
    </LinearLayout>>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="center"
                android:contentDescription="@string/edit_book_status"
                android:src="@drawable/icon_set_mode"/>
            <Spinner
                android:id="@+id/set_ziti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:spinnerMode="dropdown"
                android:entries="@array/spinner_set_ziti"/>
        </LinearLayout>
...
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="center"
                android:src="@drawable/icon_set_language"/>
            <Spinner
                android:id="@+id/set_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:spinnerMode="dropdown"
                android:entries="@array/spinner_set_language"/>
        </LinearLayout>
...
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="center"
                android:src="@drawable/icon_set_ziti"/>
            <Spinner
                android:id="@+id/set_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:spinnerMode="dropdown"
                android:entries="@array/spinner_set_mode"/>
        </LinearLayout>
...
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="恢复出厂设置"
        style="?android:listSeparatorTextViewStyle"/>
    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="恢复出厂设置"></Button>
</LinearLayout>
