...
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="center"
            android:src="@drawable/icon_label"/>
        <EditText
            android:id="@+id/text_add_new_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:hint="new label"/>
    </LinearLayout>
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Save"></Button>

        <Button
            android:id="@+id/button_add_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
...
